# localsend-rs

./: Cargo.toml  README.md  protocol.md
src/: config.rs  main.rs  strict_save.rs
